added basic fetch layout for lastfm, html btn

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <option value="option6">Jazz</option>
         </select>
 
+        <button>Select</button>
+
         <!-- results for groups in genre  -->
         <div id="results">
             <h2>Groups</h2>
