added more css, colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <main id="">
+    <nav>
     <h1>Music Finder</h1>
+    <button>Theme Toggle</button>
+        
+    </nav>
     <!-- dropdown selector to choose genre -->
         <label for="dropdown">Select a genre!</label>
             <select id="dropdown">
