--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <input type="checkbox" id="toggle" class="hidden"/>
                     <label for="toggle">
                     <div class="w-9 h-5 flex items-center bg-gray-300 rounded-full p-1">
-                        <div class="w-4 h-4 bg-white rounded-full shadow-md"></div>
+                        <div class="w-4 h-4 bg-white rounded-full shadow-md transform duration-300 ease-in-out"></div>
                     </div>
                 </label>
                 </div>
