--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="text-x1 font-bold text-gray-800 dark:text-white">Music Event Finder</h1>
 
         <!-- light and dark mode toggle button -->
-        <div class="flex flex-col space-y-12 m-auto max-w-5xl mt-12">
+        <div id="light-dark" class="flex flex-col space-y-12 m-auto max-w-5xl mt-12">
             <div class="flex justify-end items-center space-x-2">
                 <span class="text-sm text-gray-800">Light</span>
                 <div>
