--- a/index.html
+++ b/index.html
@@ -43,20 +43,12 @@
     <main class="p-6">
         
         <!-- dropdown selector to choose genre -->
-        <label for="dropdown" class="block text-white font-bold mb-2">Select A Genre</label>
-        <select id="dropdown" class="w-full px-4 py-2 mb-4 bg-white border rounded shadow-sm focus:outline-none focus:ring focus:border-blue-300">
-            <option value="" selected disabled>Select an option</option>
-            <option value="option1">Pop</option>
-            <option value="option2">Rap</option>
-            <option value="option3">Country</option>
-            <option value="option4">Rock</option>
-            <option value="option5">EDM</option>
-            <option value="option6">Jazz</option>
-        </select>
+        <label class="block text-white font-bold mb-2">Enter Artist/Band Name</label>
+        <input type="text" class="text-white font-bold" id="artist-search">
     
         <!-- 'Select' button once genre is selected-->
-        <button class="px-4 py-2 text-white bg-blue-500 rounded shadow-sm hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300">
-            Select
+        <button class="px-4 py-2 text-white bg-blue-500 rounded shadow-sm hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300" id="search-btn">
+            Search
         </button>
 
     </main>
@@ -93,11 +85,16 @@
         <img src="img/j_cole_photo_by_isaac_brekken_wireimage_getty_503069628.jpg">
         <p class="title">J Cole</p>
     </div>
+   </div>
 
-
-
-
-
+   <!-- AudioDB Fetch Test UI -->
+   <div>
+      <h2>Album Data Below!</h2>
+      <h6 id="albums">Album Info</h6>
+      <h6 id="albums2">More Album Info</h6>
+      <h6 id="albums3">More Album Info</h6>
+      <h6 id="albums4">More Album Info</h6>
+      <h6 id="albums5">More Album Info</h6>
    </div>
 
 
