Started to animate toggle button and change light and dark theme

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                     <input type="checkbox" id="toggle" class="hidden"/>
                     <label for="toggle">
                     <div class="w-9 h-5 flex items-center bg-gray-300 rounded-full p-1">
-                        <div class="w-4 h-4 bg-white rounded-full shadow-md transform duration-300 ease-in-out"></div>
+                        <div id="toggle-dot" class="w-4 h-4 bg-white rounded-full shadow-md transform duration-300 ease-in-out"></div>
                     </div>
-                </label>
+                    </label>
                 </div>
                 <span class="text-sm text-gray-800">Dark</span>
             </div>
