finished fetch function, albums display on screen, keydown function for enter key

--- a/index.html
+++ b/index.html
@@ -88,13 +88,8 @@
    </div>
 
    <!-- AudioDB Fetch Test UI -->
-   <div>
-      <h2>Album Data Below!</h2>
-      <h6 id="albums">Album Info</h6>
-      <h6 id="albums2">More Album Info</h6>
-      <h6 id="albums3">More Album Info</h6>
-      <h6 id="albums4">More Album Info</h6>
-      <h6 id="albums5">More Album Info</h6>
+   <div id="albums">
+      
    </div>
 
 
