--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="text-gray-900 leading-tight dark">
+<html lang="en" class="text-gray-900 leading-tight">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 
-<body class="min-h-screen bg-slate-700">
+<body class="min-h-screen dark-mode">
     
     <header class="bg-white dark:bg-cyan-950 p-8 flex justify-between items-center" class="header">
          <!-- Music Finder Header -->
