--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- light and dark mode toggle button -->
         <div id="light-dark" class="flex flex-col space-y-12 m-auto max-w-5xl mt-12">
             <div class="flex justify-end items-center space-x-2">
-                <span class="text-sm">L</span>
+                <span class="text-sm"><img class="sun" src="img/9025960_sun_icon.png"></span>
                 <div>
                     <input type="checkbox" id="toggle" class="hidden"/>
                     <label for="toggle">
@@ -26,7 +26,7 @@
                     </div>
                     </label>
                 </div>
-                <span class="text-sm text-gray-800">D</span>
+                <span class="text-sm text-gray-800"><img class="moon" src="img/9040428_moon_stars_icon.png"></span>
             </div>
         </div>
         
